nav bar boilerplate

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -2,14 +2,8 @@
 
 {% block content %}
 <head>
-    <title>Index</title>
+    <title>Down Detector</title>
     <link rel="stylesheet" href="static/style.css">
 </head>
-
-<body>
-
-    <h1>Placeholder for Home HTML File</h1>
-
-</body>
 
 {% endblock %}
