--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <head>
     <title>UR Web Hub</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 
 <body>
