accepts user reports for dd and commits them to db

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -3,7 +3,7 @@
 {% block content %}
 <head>
     <title>Down Detector</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 
 {% endblock %}
