--- a/templates/downdetectornav.html
+++ b/templates/downdetectornav.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>Down Detector Nav</title>
-    <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 
 <body>
