data for map hotspotting

--- a/templates/downdetectornav.html
+++ b/templates/downdetectornav.html
@@ -9,14 +9,16 @@
 
 <body>
     <h1>Buildings</h1>
-    <ol>
+
+    <img src = "static/rivercampusmap.png">
+   <!-- <ol>
         {% for building in buildingsData %}
         <li>
             <h3>{{ building.name }}</h3>
 
         </li>
         {% endfor %}
-    </ol>
+    </ol> -->
 </body>
 
 {% endblock %}
