--- a/static/styles.css
+++ b/static/styles.css
@@ -37,7 +37,7 @@ li {
 	background-color: #999999;
 	color: #323131;
 	padding: 30px;
-	border-radius: 15px;
+	border-radius: 0px 0px 15px 15px;
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
@@ -56,7 +56,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .w3-pale-blue {
-	color:  #6f6e6e;
+	color:  #484848 !important;
 }
 
 h2.full-width {
@@ -125,7 +125,6 @@ p {
 }
 
 ol, ul {
-	padding-left: 50px;
 	font-family: "Century Gothic";
 	font-size: 20px;
 	text-align: center;
@@ -248,7 +247,28 @@ img {
 
 
 nav {
-	padding-top: 40px;
+	padding-top: 2em;
+	padding-bottom: 2em;
+  background-color: #484848;
+  overflow: hidden;
+  text-align: center;
+  padding-right: 2.2em;
+  border-radius:  15px 15px 0px 0px;
+}
+
+nav li {
+	display: inline;
+	margin: .4em; 
+	text-align: center;
+}
+
+.w3-btn {
+	white-space:  normal;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+nav .icon {
+  display: none;
 }
 
 @media screen and (max-width: 550px) {
@@ -259,8 +279,29 @@ nav {
 	li {
 		font-size: 20px;
 	}
+
+	@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
 }
 
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 
 @media screen and (max-width: 450px) {
 	.inner-container {
