start of map hotspotting

--- a/templates/downdetectornav.html
+++ b/templates/downdetectornav.html
@@ -9,16 +9,11 @@
 
 <body>
     <h1>Buildings</h1>
-
-    <img src = "static/rivercampusmap.png">
-   <!-- <ol>
-        {% for building in buildingsData %}
-        <li>
-            <h3>{{ building.name }}</h3>
-
-        </li>
-        {% endfor %}
-    </ol> -->
+    <img src="static/rivercampusmap.png" usemap="#image-map">
+    <map name="image-map">
+   <!-- <area target="" alt="" title="" href="downdetector/1" coords="588,231,8" shape="circle">
+    <area target="" alt="" title="" href="downdetector/2" coords="624,205,7" shape="circle"> -->
+    </map>
 </body>
 
 {% endblock %}
