--- a/static/styles.css
+++ b/static/styles.css
@@ -5,21 +5,21 @@ body {
 
 .container {
 	margin: 0 auto;
-	width: 90%;
-	max-width: 960px;
+	/* width: 90%; 
+   max-width: 960px; */
 	display: grid;
 	grid-template-columns: 2fr 1fr;
 	text-align: center;
-	padding-top: 75px;
-	padding-bottom: 100px;
+	/* padding-top: 75px; */
+	padding-bottom: 5em;
 } 
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 900px) {
 	.container {
 		display: block;
-		padding-top: 100px;
 	}
 }
+
 
 li {
 	font-size: 30px;
@@ -37,14 +37,60 @@ li {
 	background-color: #999999;
 	color: #323131;
 	padding: 30px;
-	border-radius: 0px 0px 15px 15px;
+	border-radius: 15px 15px 15px 15px;
 	margin: 0 auto;
+	margin-top: 4em;
 	display: flex;
 	flex-wrap: wrap;
+	max-width: 60%;
 }
 
-.accordion div {
-	margin-bottom: 10px;
+
+@media screen and (min-width: 550px) and (max-width: 1000px) {
+	.lead {
+		max-width: 90%;
+	}
+}
+
+#accordion {
+	margin: 0 auto;
+	max-width: 90%;
+}
+
+@media screen and (min-width: 200px) and (max-width: 550px) {
+	.lead {
+		max-width: 100%;
+		padding-left:  0px;
+		padding-right: 0px;
+		padding-bottom: 6em;
+		border-radius:  0px;
+	}
+
+	h2 {
+		margin-bottom: 1em;
+	}
+
+	#accordion {
+		max-width: 100%;
+		width: 100%;
+	}
+}
+
+#accordion div {
+	margin: 0 auto;
+}
+
+.short-text { 
+	display: none; 
+}
+
+@media (max-width: 650px) {
+    .short-text { 
+    	display: inline-block; 
+    }
+    .full-text { 
+    	display: none; 
+    }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -61,25 +107,11 @@ h1, h2, h3, h4, h5, h6 {
 
 h2.full-width {
 	width: 100%;
-	position: relative;
-	right: 40px;
-}
-
-header {
-	padding-bottom: 30px;
 }
 
 header, footer, nav, .lead, .full-width {
 	grid-column: 1 / 3;
 } 
-
-article {
-	padding-right: 50px;
-}
-
-aside {
-	padding-left: 50px;
-}
 
 h1 {
 	font-family: "Century Gothic";
@@ -97,11 +129,14 @@ h1 {
 h2 {
 	font-weight: bold;
 	margin-bottom: 2em;
-	padding-left: 50px;
 	font-family: "Century Gothic";
 	background-repeat: no-repeat;
 	text-align: center;
-	color: #9ef1f0;
+	color: #003366;
+}
+
+.w3-aqua {
+	background-color: #ADD8E6 !important;
 }
 
 .full-width {
@@ -115,13 +150,15 @@ h3 {
 	font-family: "Trebuchet MS";
 	text-align: center;
 	font-size: 30px;
-	color: #3c04b0;
+	color: #003366;
 }
 
 p {
 	font-family: "Century Gothic";
 	font-size: 20px;
 	font-weight: bold;
+	padding-left:  1em;
+	padding-right:  1em;
 }
 
 ol, ul {
@@ -146,41 +183,18 @@ a:hover {
 
 p::first-letter {
  	float: left;
-  	font-size: 50px;
-  	line-height: 60px;
+  font-size: 50px;
+  line-height: 60px;
  	padding-top: 4px;
-  	padding-right: 8px;
-  	padding-left: 3px;
+  padding-right: 8px;
+  padding-left: 3px;
 }
 
-
-.container2 {
-   margin: 0 auto;
-   display: grid;
-   column-count: 3;
-   column-gap: 40px;
-   column-rule-style: solid;
-   column-rule-width: 1px;
-   column-rule-color: lightblue;
-   grid-template-columns: 1fr 1fr;
-   padding-left: 40px;
-   padding-right: 40px;
-}
-
-@media screen and (max-width: 1000px) {
-	.container2 {
-		display: inline;
-	}
-}
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-}
-
-img.center {
-	width: 100%;
 }
 
 figcaption {
@@ -189,16 +203,6 @@ figcaption {
   font-family: Verdana;
 }
 
-h4 {
-font-size: 25px;
-font-weight: bold;
-font-family: "Courier New";
-text-align: center;
-background-color: #3c04b0;
-color: #ffdb4d;
-padding-bottom: 40px;
-padding-top: 40px;
-}
 
 h5 {
 font-size: 25px;
@@ -209,26 +213,36 @@ background-color: #9ef1f0;
 color: #FA8072;
 }
 
-
 footer {
-   width: 100%;
-   position: absolute;
-   background-color: #3c04b0;
-   left: 0;
-   padding-top: 5px;
-   padding-bottom: 5px;
+	width: 100%;
+  position: absolute;
+	font-weight: bold;
+	text-align: center;
+	background-color: #003366;
+	color: #ffdb4d;
+ 	left: 0;
+	padding-bottom: 40px;
+	padding-top: 40px;
 }
 
-h4.home {
+footer h4 {
 	padding-top: 25px;
 	padding-bottom: 25px;
+	font-family: "Century Gothic";
+	font-size: 25px;
+}
+
+@media screen and (min-width: 200px) and (max-width: 550px) {
+	footer h4 {
+		font-size: 20px;
+	}
 }
 
 header {
 	width: 100%;
-	background-color: #3c04b0;
-	padding-bottom: 40px;
-	padding-top: 25px;
+	background-color: #003366;
+	padding-bottom: 3em;
+	padding-top: 3em;
 	top: 0px;
 	right: 0px;
 	left: 0px;
@@ -236,7 +250,7 @@ header {
 }
 
 .header {
-	padding-bottom: 100px;
+	margin-bottom: 100px;
 }
 
 img {
@@ -245,15 +259,11 @@ img {
 	height: auto;
 }
 
-
 nav {
-	padding-top: 2em;
-	padding-bottom: 2em;
+	padding-top: 4em;
   background-color: #484848;
   overflow: hidden;
   text-align: center;
-  padding-right: 2.2em;
-  border-radius:  15px 15px 0px 0px;
 }
 
 nav li {
@@ -266,11 +276,6 @@ nav li {
 	white-space:  normal;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
-nav .icon {
-  display: none;
-}
-
 @media screen and (max-width: 550px) {
 	.slider {
 		width:25vh;
@@ -279,28 +284,6 @@ nav .icon {
 	li {
 		font-size: 20px;
 	}
-
-	@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
 }
 
 @media screen and (max-width: 450px) {
@@ -321,4 +304,5 @@ nav .icon {
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 25px;
 	}
+}
 }
