--- a/static/styles.css
+++ b/static/styles.css
@@ -230,6 +230,8 @@ footer h4 {
 	padding-bottom: 25px;
 	font-family: "Century Gothic";
 	font-size: 25px;
+	padding-left: 1.5em;
+	padding-right: 1.5em;
 }
 
 @media screen and (min-width: 200px) and (max-width: 550px) {
