--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -4,6 +4,10 @@
 <head>
     <title>Down Detector</title>
     <link rel="stylesheet" href="static/style.css">
+    <body>
+        <button type="button">This Elevator is Down</button>
+        <button type="button">The Elevator is Functional</button>
+    </body>
 </head>
 
 {% endblock %}
