--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -1,13 +1,17 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
 <head>
     <title>Down Detector</title>
     <link rel="stylesheet" href="static/style.css">
-    <body>
-        <button type="button">This Elevator is Down</button>
-        <button type="button">The Elevator is Functional</button>
-    </body>
+
+<body>
+    <h3>{{ name }}</h3>
+    </br>
+    <button type="button">This Elevator is Down</button>
+    <button type="button">The Elevator is Functional</button>
+</body>
 </head>
 
 {% endblock %}
