tracking recent report count

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -9,6 +9,8 @@
 <body>
     <h3>{{ name }}</h3>
     </br>
+    <h3>Recent Reports: {{ reportcount }}</h3>
+    </br>
     <button type="button">This Elevator is Down</button>
     <button type="button">The Elevator is Functional</button>
 </body>
