--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -5,15 +5,20 @@
 <head>
     <title>Down Detector</title>
     <link rel="stylesheet" href="static/style.css">
+</head>
 
 <body>
     <h3>{{ name }}</h3>
     </br>
     <h3>Recent Reports: {{ reportcount }}</h3>
     </br>
-    <button type="button">This Elevator is Down</button>
-    <button type="button">The Elevator is Functional</button>
+    <form>
+        <input type="radio" id="down" name="status" value="true">
+        <label for="down">This Elevator is Down</label>
+        <input type="radio" id="up" name="status" value="false">
+        <label for="up">The Elevator is Working</label>
+        <input type="submit" value="Submit">
+    </form>
 </body>
-</head>
 
 {% endblock %}
