--- a/templates/dining.html
+++ b/templates/dining.html
@@ -1,1 +1,57 @@
-filler text
+<head>
+    <title>UR Web Hub</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="../static/styles.css">
+</head>
+<body>
+    <div class="header">
+      <header>
+         <a href="urwebhub.html"><h1>UR Web Hub</h1></a>
+         <div class="intro">Campus Resources</div>
+      </header>
+   </div>
+      <div class="container">
+     	<nav class="menu" id="navMenu">
+            <ul>
+               <li><a href="index.html" class="active">Home</a></li>
+               <li><a href="dining.html">Dining</a></li>
+               <li><a href="ratemycourse.html">Academics</a></li>
+               <li><a href="downdetector.html">Down Detector</a></li>
+               <li><a href="contact.html">Contact us</a></li>
+               </a>
+            </ul>
+         </nav>
+         <div id="current_date"></div>
+      <section class="lead">
+         <h2 class="full-width">Dining Locations</h2>
+         <img src="../static/hoursofoperation.png" alt="Fall Hours of Operation">
+         <div id="accordion">
+            <button onclick="openAccordion('downdetector')" class="w3-btn w3-block w3-aqua"><h3><em>Down Detector</em></h3></button>
+         <div id="downdetector" class="w3-hide w3-container w3-center w3-pale-blue">
+            <span class="full-text"><p>There are many students on campus that rely on accessibility points on campus such as ramps and elevators. When an elevator is down, or a ramp is blocked off due to construction, this can completely alter the student’s route, or even prevent them from getting to a location in the first place. This is where the down detector comes in. Inspired by website down detectors and the frequent Anderson Hall elevator outages, the UR Hub will allow students to report blocked ramps or non-functional elevators. Then, students who rely on this information to get place-to-place can plan accordingly if they see a recent report has been made. While the current plan is to rely fully on crowdsourced data from students, if time permits, functionality to allow facilities to report maintenance in a particular area is a feature we would like to add. This feature can help speed up the rate in which mechanical problems are fixed, in addition to being an informative resource to users. <br><br><br> Click here to learn more: <a href="downdetector.html">Down Detector</a></p></span>
+            <span class="short-text"><p>Find or report malfunctioning things on campus! Include picture here!</p></span>
+        </div>
+         <button onclick="openAccordion('dining')" class="w3-btn w3-block w3-aqua"><h3><em>Dining Resources</em></h3></button>
+         <div id="dining" class="w3-hide w3-container w3-center w3-pale-blue">
+            <span class="full-text"><p>Continuing with the crowdsourcing theme, we would like to expand on the current Dining Menu Feature and allow for students to report inaccuracies in the dining menu published online. This feature would pull data from the UR Dining Services website to display what is available at different locations. Through our new feature, students will be able to filter by dietary restrictions to find places that will accommodate those needs. In addition, besides each dining option, there will be a section for students to report the accuracy of the current menu. Students will not only be able to report if a station does not have the menu items listed, but will be able to make comments to inform other students of what the station is actually offering. Our improved implementation of the dining menus will also include food items at locations that aren’t typically listed on the menu of the dining website. This is important because although the school lists some dietary restrictions, they don’t include a more expansive list, and they sometimes advertise a station as having food that isn't actually served since they often run out of certain menu items and don’t update. That can lead to a student with dietary restrictions paying to go to a dining hall and then not even being able to eat anything. In addition, we hope by expanding the list of menus to reach even more locations beyond the three major dining halls, we will enable more of the student body to feel confident obtaining food and drink at every location. <br><br><br> Click here to learn more: <a href="dining.html">Dining</a></p></span>
+            <span class="short-text"><p>Find extensive nutrition information for locations on campus and give feedback to dining services! Insert picture here.</p></span>
+        </div>
+              <button onclick="openAccordion('ratemyclass')" class="w3-btn w3-block w3-aqua"><h3><em>Course Ratings</em></h3></button>
+         <div id="ratemyclass" class="w3-hide w3-container w3-center w3-pale-blue">
+            <span class="full-text"><p>One feature we would be interested in building a minor working beta for is a way for students to rate and discuss classes. Instead of being professor-specific like ratemyprofessor, this feature would enable students to discuss a general class and whether they think it is too difficult, too easy, how it has helped them learn (or not), helpful tips, overview of topics covered (so you don’t have to hunt down the syllabi anymore), etc., and may also contain general studying tips.<br><br><br>Learn more here: <a href="ratemyclass.html">Academics</a></p></span>
+            <span class="short-text"><p>Want to know more about a course than just the professor? Check out RateMyCourse! Insert picture here.</p></span>
+        </div>
+    </div>
+      </section>
+   </div>
+   <div class="home">
+   <footer>
+      <h4>Sarah, Grant, Kelly, Rachael, Emersyn- CSC 210 Human Computer Interaction 👩🏻‍💻 👩‍💻 👨🏻‍💻</h4>
+   </footer>
+</div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="js/menu-highlighter.js"></script>
+<script src="../js/script.js"></script>
+</body>
