--- a/static/styles.css
+++ b/static/styles.css
@@ -62,7 +62,7 @@ li {
 		max-width: 100%;
 		padding-left:  0px;
 		padding-right: 0px;
-		padding-bottom: 6em;
+		padding-bottom: 0em;
 		border-radius:  0px;
 	}
 
@@ -76,12 +76,21 @@ li {
 	}
 }
 
+#current_date {
+	background-color: #ddffff;
+	margin-top: 2em;
+	max-width: 60%;
+	margin-left: 20%;
+}
+
 #accordion div {
 	margin: 0 auto;
 }
 
 .short-text { 
 	display: none; 
+	color: #ffdb4d;
+	font-family: "Century Gothic";
 }
 
 @media (max-width: 650px) {
@@ -109,7 +118,7 @@ h2.full-width {
 	width: 100%;
 }
 
-header, footer, nav, .lead, .full-width {
+header, footer, nav, .lead, .full-width, #current_date {
 	grid-column: 1 / 3;
 } 
 
@@ -147,24 +156,26 @@ h2 {
 h3 {
 	margin: 40px;
 	line-height: 1.5em;
-	font-family: "Trebuchet MS";
+	font-family: "Century Gothic";
 	text-align: center;
 	font-size: 30px;
 	color: #003366;
 }
 
 p {
-	font-family: "Century Gothic";
+	font-family: "Trebuchet MS";
 	font-size: 20px;
 	font-weight: bold;
 	padding-left:  1em;
 	padding-right:  1em;
 }
 
-ol, ul {
+ul {
 	font-family: "Century Gothic";
 	font-size: 20px;
 	text-align: center;
+	padding-top: 2em;
+	padding-bottom: 1em;
 }
 
 figure {
@@ -256,9 +267,10 @@ header {
 }
 
 img {
-	width: auto;
-	max-width: 100%;
-	height: auto;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
+	padding-bottom: 2em;
 }
 
 nav {
