added extension and title

--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -1,1 +1,10 @@
-filler text
+{% extends "layout.html" %}
+
+
+{% block content %}
+<head>
+    <title>Rate My Course</title>
+</head>
+<body>
+</body>
+{% endblock %}
