--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,12 +1,10 @@
-<style>
-    div {
-        background-color: #073661;
-        overflow: hidden;
-    }
-</style>
-
-<div>UR Web Hub</div>
-
-<div class="topnav" style="text-align: right">
-    <a href="/">Home</a>
-</div>
+<nav class="menu" id="navMenu">
+            <ul>
+               <li><a href="index.html" class="active">Home</a></li>
+               <li><a href="dining.html">Dining</a></li>
+               <li><a href="ratemycourse.html">Academics</a></li>
+               <li><a href="downdetector.html">Down Detector</a></li>
+               <li><a href="contact.html">Contact us</a></li>
+               </a>
+            </ul>
+         </nav>
