--- a/templates/index.html
+++ b/templates/index.html
@@ -16,16 +16,7 @@
       </header>
    </div>
       <div class="container">
-     	<nav class="menu" id="navMenu">
-            <ul>
-               <li><a href="index.html" class="active">Home</a></li>
-               <li><a href="dining.html">Dining</a></li>
-               <li><a href="ratemycourse.html">Academics</a></li>
-               <li><a href="downdetector.html">Down Detector</a></li>
-               <li><a href="contact.html">Contact us</a></li>
-               </a>
-            </ul>
-         </nav>
+        {% extends "nav.html" %}
       <section class="lead">
          <h2 class="full-width">Feature Preview</h2>
          <div id="accordion">
