--- a/templates/dining.html
+++ b/templates/dining.html
@@ -1,3 +1,7 @@
+{% extends "layout.html" %}
+
+{% block content %}
+
 <head>
     <title>UR Web Hub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -55,3 +59,5 @@
 <script src="js/menu-highlighter.js"></script>
 <script src="../js/script.js"></script>
 </body>
+
+{% endblock %}
