--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -4,9 +4,15 @@
 <head>
     <title>Rate My Course</title>
 </head>
+<style type="text/css">
+	.dropdown {
+		position: relative;
+		display: inline-block;
+	}
+</style>
 <body>
 	<center><h1>Rate My Course</h1></center>
-	<div class=search>
+	<center><div class=search>
 		<h4>Department</h4>
 		<div class="dropdown">
 			<button class="dropbtn">Dropdown</button>
@@ -50,6 +56,6 @@
 			</div>
 		</div>
 		<input type="text" placeholder="Search">
-	</div>
+	</div></center>
 </body>
 {% endblock %}
