--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,16 @@
          <div class="intro">Campus Resources</div>
       </header>
    </div>
+    <nav class="menu" id="navMenu">
+            <ul>
+               <li><a href="index.html" class="active">Home</a></li>
+               <li><a href="dining.html">Dining</a></li>
+               <li><a href="ratemycourse.html">Academics</a></li>
+               <li><a href="downdetector.html">Down Detector</a></li>
+               <li><a href="contact.html">Contact us</a></li>
+               </a>
+            </ul>
+         </nav>
       <div class="container">
       <section class="lead">
          <h2 class="full-width">Feature Preview</h2>
