Adding js to the dropdown menu in ratemycourse

--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -12,50 +12,54 @@
 </style>
 <body>
 	<center><h1>Rate My Course</h1></center>
-	<center><div class=search>
-		<h4>Department</h4>
-		<div class="dropdown">
-			<button class="dropbtn">Dropdown</button>
-			<div class="dropdown-content">
-				<a href="#">Accounting</a>
-				<a href="#">Anthropology</a>
-				<a href="#">Art History</a>
-				<a href="#">Biology</a>
-				<a href="#">Brain & Cognitive Sciences</a>
-				<a href="#">Business</a>
-				<a href="#">Chemical Engineering</a>
-				<a href="#">Chemistry</a>
-				<a href="#">Computer Science</a>
-				<a href="#">Economics</a>
-				<a href="#">Education</a>
-				<a href="#">English</a>
-				<a href="#">Film</a>
-				<a href="#">Finance</a>
-				<a href="#">Fine Arts</a>
-				<a href="#">Geography</a>
-				<a href="#">Geology</a>
-				<a href="#">Graphic Arts</a>
-				<a href="#">History</a>
-				<a href="#">Information Science</a>
-				<a href="#">Linguistics</a>
-				<a href="#">Literature</a>
-				<a href="#">Marketing</a>
-				<a href="#">Mathematics</a>
-				<a href="#">Medicine</a>
-				<a href="#">Music</a>
-				<a href="#">Nursing</a>
-				<a href="#">Philosophy</a>
-				<a href="#">Physics</a>
-				<a href="#">Political Science</a>
-				<a href="#">Psychology</a>
-				<a href="#">Religion</a>
-				<a href="#">Sociology</a>
-				<a href="#">Theater</a>
-				<a href="#">Women's Studies</a>
-				<a href="#">Writing</a>
+	<center>
+		<div class=search>
+			<h4>Department</h4>
+			<div class="dropdown">
+				<button onclick="dropFunction()" class="dropbtn">Dropdown</button>
+				<div id="dropMenu" class="dropdown-content">
+					<a href="#">Accounting</a>
+					<a href="#">Anthropology</a>
+					<a href="#">Art History</a>
+					<a href="#">Biology</a>
+					<a href="#">Brain & Cognitive Sciences</a>
+					<a href="#">Business</a>
+					<a href="#">Chemical Engineering</a>
+					<a href="#">Chemistry</a>
+					<a href="#">Computer Science</a>
+					<a href="#">Economics</a>
+					<a href="#">Education</a>
+					<a href="#">English</a>
+					<a href="#">Film</a>
+					<a href="#">Finance</a>
+					<a href="#">Fine Arts</a>
+					<a href="#">Geography</a>
+					<a href="#">Geology</a>
+					<a href="#">Graphic Arts</a>
+					<a href="#">History</a>
+					<a href="#">Information Science</a>
+					<a href="#">Linguistics</a>
+					<a href="#">Literature</a>
+					<a href="#">Marketing</a>
+					<a href="#">Mathematics</a>
+					<a href="#">Medicine</a>
+					<a href="#">Music</a>
+					<a href="#">Nursing</a>
+					<a href="#">Philosophy</a>
+					<a href="#">Physics</a>
+					<a href="#">Political Science</a>
+					<a href="#">Psychology</a>
+					<a href="#">Religion</a>
+					<a href="#">Sociology</a>
+					<a href="#">Theater</a>
+					<a href="#">Women's Studies</a>
+					<a href="#">Writing</a>
+				</div>
 			</div>
+			<input type="text" placeholder="Search">
 		</div>
-		<input type="text" placeholder="Search">
-	</div></center>
+	</center>
+
+	<script src="../js/script.js"></script>
 </body>
 {% endblock %}
