--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -5,6 +5,7 @@
 <head>
     <title>Down Detector</title>
     <link rel="stylesheet" href="static/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
@@ -20,6 +21,30 @@
         <label for="up">The Elevator is Working</label>
         <input type="submit" value="Submit">
     </form>
+    </br>
+    <canvas id="barChart" width="900" height="400"></canvas>
+    <script>
+        const ctx = document.getElementById('barChart');
+      
+        new Chart(ctx, {
+          type: 'bar',
+          options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            },
+          data: {
+            labels: {{ labels | safe }},
+            datasets: [{
+              label: '# of Reports',
+              data: {{ values | safe}},
+              borderWidth: 1
+                }]
+            },
+        });
+      </script>
 </body>
 
 {% endblock %}
