chart.js functionality amend

--- a/templates/downdetector.html
+++ b/templates/downdetector.html
@@ -24,6 +24,7 @@
     </br>
     <canvas id="barChart" width="900" height="400"></canvas>
     <script>
+        //IGNORE RED UNDERLINES, jinja will populate data before the js script runs
         const ctx = document.getElementById('barChart');
       
         new Chart(ctx, {
