changed course html

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
         </div>
               <button onclick="openAccordion('ratemyclass')" class="w3-btn w3-block w3-aqua"><h3><em>Course Ratings</em></h3></button>
          <div id="ratemyclass" class="w3-hide w3-container w3-center w3-pale-blue">
-            <span class="full-text"><p>One feature we would be interested in building a minor working beta for is a way for students to rate and discuss classes. Instead of being professor-specific like ratemyprofessor, this feature would enable students to discuss a general class and whether they think it is too difficult, too easy, how it has helped them learn (or not), helpful tips, overview of topics covered (so you don’t have to hunt down the syllabi anymore), etc., and may also contain general studying tips.<br><br><br>Learn more here: <a href="ratemyclass.html">Academics</a></p></span>
+            <span class="full-text"><p>One feature we would be interested in building a minor working beta for is a way for students to rate and discuss classes. Instead of being professor-specific like ratemyprofessor, this feature would enable students to discuss a general class and whether they think it is too difficult, too easy, how it has helped them learn (or not), helpful tips, overview of topics covered (so you don’t have to hunt down the syllabi anymore), etc., and may also contain general studying tips.<br><br><br>Learn more here: <a href="ratemycourse.html">Academics</a></p></span>
             <span class="short-text"><p>Want to know more about a course than just the professor? Check out RateMyCourse! Insert picture here.</p></span>
         </div>
     </div>
