--- a/templates/downdetectornav.html
+++ b/templates/downdetectornav.html
@@ -5,6 +5,14 @@
 <head>
     <title>Down Detector Nav</title>
     <link rel="stylesheet" href="../static/styles.css">
+    <style>
+        img{
+            margin-left: 0;
+            margin-right: 0;
+            width: auto;
+            padding-bottom: 0;
+        }
+    </style>
 </head>
 
 <body>
