--- a/templates/index.html
+++ b/templates/index.html
@@ -17,11 +17,11 @@
    </div>
     <nav class="menu" id="navMenu">
             <ul>
-               <li><a href="index.html" class="active">Home</a></li>
-               <li><a href="dining.html">Dining</a></li>
-               <li><a href="ratemycourse.html">Academics</a></li>
-               <li><a href="downdetector.html">Down Detector</a></li>
-               <li><a href="contact.html">Contact us</a></li>
+               <li><a href="index" class="active">Home</a></li>
+               <li><a href="dining">Dining</a></li>
+               <li><a href="ratemycourse">Academics</a></li>
+               <li><a href="downdetector">Down Detector</a></li>
+               <li><a href="feedbackform">Contact us</a></li>
                </a>
             </ul>
          </nav>
