--- a/templates/feedbackform.html
+++ b/templates/feedbackform.html
@@ -18,10 +18,10 @@
     <nav class="menu" id="navMenu">
             <ul>
                <li><a href="index" class="active">Home</a></li>
-               <li><a href="dining.html">Dining</a></li>
-               <li><a href="ratemycourse.html">RateMyCourse</a></li>
-               <li><a href="downdetector.html">Down Detector</a></li>
-               <li><a href="feedbackform.html">Contact us</a></li>
+               <li><a href="dining">Dining</a></li>
+               <li><a href="ratemycourse">RateMyCourse</a></li>
+               <li><a href="downdetector">Down Detector</a></li>
+               <li><a href="feedbackform">Contact us</a></li>
             </ul>
          </nav>
     <div class="container">
