--- a/templates/dining.html
+++ b/templates/dining.html
@@ -19,7 +19,7 @@
       <div class="container">
      	<nav class="menu" id="navMenu">
             <ul>
-               <li><a href="index" class="active">Home</a></li>
+               <li><a href="/" class="active">Home</a></li>
                <li><a href="dining">Dining</a></li>
                <li><a href="ratemycourse">Academics</a></li>
                <li><a href="downdetector">Down Detector</a></li>
