--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
    </div>
     <nav class="menu" id="navMenu">
             <ul>
-               <li><a href="index" class="active">Home</a></li>
+               <li><a href="/" class="active">Home</a></li>
                <li><a href="dining">Dining</a></li>
                <li><a href="ratemycourse">Academics</a></li>
                <li><a href="downdetector">Down Detector</a></li>
