--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,7 @@
                <li><a href="index" class="active">Home</a></li>
                <li><a href="dining">Dining</a></li>
                <li><a href="ratemycourse">Academics</a></li>
-               <li><a href="downdetector">Down Detector</a></li>
+               <li><a href="downdetectornav">Down Detector</a></li>
                <li><a href="feedbackform">Contact us</a></li>
             </ul>
          </nav>
