--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
 <nav class="menu" id="navMenu">
             <ul>
-               <li><a href="index" class="active">Home</a></li>
+               <li><a href="/" class="active">Home</a></li>
                <li><a href="dining">Dining</a></li>
                <li><a href="ratemycourse">Academics</a></li>
                <li><a href="downdetectornav">Down Detector</a></li>
