--- a/templates/downdetectornav.html
+++ b/templates/downdetectornav.html
@@ -12,6 +12,9 @@
             width: auto;
             padding-bottom: 0;
         }
+        h1{
+            padding-top: 1em;
+        }
     </style>
 </head>
 
@@ -86,6 +89,8 @@
         <area target="" alt="" title="" href="downdetector/63" coords="264,551,8" shape="circle">
 
     </map>
+    </br>
+    <h1>Having trouble finding a building? Click <a href="/buildinglist">here</a> to see the list of buildings!</h1>
 </body>
 
 {% endblock %}
