--- a/static/styles.css
+++ b/static/styles.css
@@ -45,6 +45,48 @@ li {
 	max-width: 60%;
 }
 
+/* form styles */
+
+.form h2 {
+	margin-bottom: .5em;
+}
+
+label {
+	font-family: "Century Gothic";
+	color: #ADD8E6;
+	/* font-weight: bold; */
+	font-size: 2em;
+}
+
+input {
+	margin-top: 2em;
+	background-color: #f0f0f0;
+}
+
+textarea {
+	margin-top: 2em;
+	resize: none;
+	overflow: hidden;
+}
+
+fieldset {
+	background-color: #003366;
+	border-radius: 15px;
+	padding: 5em;
+}
+
+input[type=submit] {
+	background-color: #333333;
+	color: #ffdb4d;
+	border-radius: 5px;
+	padding: .5em;
+	border-color: #333333;
+	margin-bottom: 1em;
+	font-size: 2em;
+}
+
+/* end of form styles */
+
 
 @media screen and (min-width: 550px) and (max-width: 1000px) {
 	.lead {
@@ -55,6 +97,15 @@ li {
 #accordion {
 	margin: 0 auto;
 	max-width: 90%;
+}
+
+.form, form {
+	margin: 0 auto;
+	max-width: 90%;
+}
+
+fieldset {
+	margin: 0 auto;
 }
 
 @media screen and (min-width: 200px) and (max-width: 550px) {
@@ -73,6 +124,22 @@ li {
 	#accordion {
 		max-width: 100%;
 		width: 100%;
+	}
+
+	.form, form, fieldset {
+		max-width: 100%;
+		width: 100%;
+	}
+
+	fieldset {
+		padding-top: 2em;
+		padding-bottom: 2em;
+		padding-right: 0em;
+		padding-left: 0em;
+	}
+
+	input {
+		margin-bottom: 2.5em;
 	}
 }
 
