--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -83,6 +83,12 @@
 		</div>
 	</center>
 
+	<div class="home">
+		<footer>
+		   <h4>Sarah, Grant, Kelly, Rachael, Emersyn- CSC 210 Human Computer Interaction 👩🏻‍💻 👩‍💻 👨🏻‍💻</h4>
+		</footer>
+	 </div>
+
 	<script src="../js/script.js"></script>
 </body>
 {% endblock %}
