adding a break tag
also changing nav to the correct downdetector link

--- a/templates/feedbackform.html
+++ b/templates/feedbackform.html
@@ -20,7 +20,7 @@
                <li><a href="/" class="active">Home</a></li>
                <li><a href="dining">Dining</a></li>
                <li><a href="ratemycourse">RateMyCourse</a></li>
-               <li><a href="downdetector">Down Detector</a></li>
+               <li><a href="downdetectornav">Down Detector</a></li>
                <li><a href="feedbackform">Contact us</a></li>
             </ul>
          </nav>
@@ -37,7 +37,7 @@
 		        	<input type="email" id="email" name="email"><br><br>
 		        	<label for="subject">Subject of Message:</label>
 		        	<input type="text" id="subject" name="subject"><br><br>
-                    <label for="message">Message:</label>
+                    		<label for="message">Message:</label><br>
 		        	<textarea id="message" name="message"></textarea><br><br>
 		        	<input type="submit" id="submit" name="submit">
 					<label for="submit"></label>
