--- a/templates/dining.html
+++ b/templates/dining.html
@@ -20,10 +20,10 @@
      	<nav class="menu" id="navMenu">
             <ul>
                <li><a href="/" class="active">Home</a></li>
-               <li><a href="dining">Dining</a></li>
-               <li><a href="ratemycourse">Academics</a></li>
-               <li><a href="downdetectornav">Down Detector</a></li>
-               <li><a href="feedbackform">Contact us</a></li>
+               <li><a href="/dining">Dining</a></li>
+               <li><a href="/ratemycourse">Academics</a></li>
+               <li><a href="/downdetectornav">Down Detector</a></li>
+               <li><a href="/feedbackform">Contact us</a></li>
             </ul>
          </nav>
          <div id="current_date"></div>
