--- a/templates/feedbackform.html
+++ b/templates/feedbackform.html
@@ -18,10 +18,10 @@
     <nav class="menu" id="navMenu">
             <ul>
                <li><a href="/" class="active">Home</a></li>
-               <li><a href="dining">Dining</a></li>
-               <li><a href="ratemycourse">RateMyCourse</a></li>
-               <li><a href="downdetectornav">Down Detector</a></li>
-               <li><a href="feedbackform">Contact us</a></li>
+               <li><a href="/dining">Dining</a></li>
+               <li><a href="/ratemycourse">RateMyCourse</a></li>
+               <li><a href="/downdetectornav">Down Detector</a></li>
+               <li><a href="/feedbackform">Contact us</a></li>
             </ul>
          </nav>
     <div class="container">
