--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,9 +1,9 @@
 <nav class="menu" id="navMenu">
             <ul>
                <li><a href="/" class="active">Home</a></li>
-               <li><a href="dining">Dining</a></li>
-               <li><a href="ratemycourse">Academics</a></li>
-               <li><a href="downdetectornav">Down Detector</a></li>
-               <li><a href="feedbackform">Contact us</a></li>
+               <li><a href="/dining">Dining</a></li>
+               <li><a href="/ratemycourse">Academics</a></li>
+               <li><a href="/downdetectornav">Down Detector</a></li>
+               <li><a href="/feedbackform">Contact us</a></li>
             </ul>
          </nav>
